<resources>
    <string name="app_name">Mareu</string>
    <string name="add_users">Add users</string>
    <string name="enter_user_mail">Type user email adress</string>
    <string name="filter_by_date_or_location">Filter by date or room</string>
    <string name="filter_room">filter room</string>
    <string name="add_users_save">Save</string>
    <string name="add_users_button">Add users button</string>
    <string name="expand_icon">Expand icon</string>
    <string name="filter_start_date">filter start date</string>
    <string name="filter_end_date">Filter end date</string>
    <string name="apply">Apply</string>
    <string name="date_icon">date icon</string>
    <string name="room_icon">room icon</string>
    <string name="drop_icon">drop icon</string>
    <string name="empty_meeting_users_list">this meeting is empty!</string>
    <string name="collapse_icon">collapse icon</string>
    <string name="create_meeting">Add meeting</string>
    <string name="subject">Title</string>
    <string name="room">Room</string>
    <string name="meeting_date_and_time">Meeting date and time</string>
    <string name="add_users_to_the_meeting">Add users to the meeting</string>
    <string name="add_meetings_save">Save</string>
</resources>