<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        android:background="#2196F3">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/fragment_add_meetings_dialog_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingStart="6dp"
            android:paddingEnd="16dp"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_baseline_close_24"
            app:title="@string/create_meeting"
            app:titleTextColor="#FFEB3B">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.meeting_creation.MeetingCreationFragment">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_add_meetings_title_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_2x"
                android:hint="@string/subject"
                app:helperText="required">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_subject_24"
                    android:drawablePadding="@dimen/size_2x"
                    android:maxLength="35" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_add_meetings_room_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_add_meetings_title_text_input"
                android:layout_margin="@dimen/size_2x"
                android:hint="@string/room"
                app:helperText="required">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_place_24"
                    android:drawablePadding="@dimen/size_default"
                    android:maxLength="25" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_add_meetings_date_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_2x"
                android:layout_below="@+id/fragment_add_meetings_room_text_input"
                android:hint="@string/meeting_date_and_time"
                app:helperText="required">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_access_time_24"
                    android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                    android:drawablePadding="@dimen/size_default"
                    android:inputType="datetime"
                    android:maxLength="14" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/fragment_add_meetings_users_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_add_meetings_date_text_input">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_2x"
                    android:drawableStart="@drawable/ic_baseline_groups_24"
                    android:drawablePadding="@dimen/size_2x"
                    android:padding="@dimen/size_2x"
                    android:text="@string/add_users_to_the_meeting"
                    android:textAppearance="@android:style/TextAppearance.Material"
                    android:textColor="@color/colorAccent" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/fragment_meetings_creation_participants_list_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_add_meetings_users_card_view"
                android:layout_marginTop="1dp">

                <TextView
                    android:id="@+id/fragment_add_meetings_users_full_list_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/size_2x"
                    android:padding="@dimen/size_2x"
                    android:textAppearance="@android:style/TextAppearance.Material"
                    android:textColor="@color/colorAccent"
                    android:visibility="gone" />

            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>