<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/AppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/fragment_add_users_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_close_24"
            app:title="@string/add_users"
            app:titleTextColor="#FFEB3B">


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_meetings_creation_users_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_add_user_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_2x"
                    android:layout_marginTop="@dimen/size_2x"
                    android:layout_marginEnd="@dimen/size_2x"
                    android:layout_marginBottom="@dimen/size_2x"
                    android:hint="@string/enter_user_mail">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_baseline_email_24"
                        android:drawablePadding="@dimen/size_3x"
                        android:inputType="textEmailAddress"
                        android:maxLength="50" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/fragment_add_user_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/fragment_add_user_text_input"
                    android:layout_alignBottom="@+id/fragment_add_user_text_input"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/size_2x"
                    android:layout_marginEnd="@dimen/size_2x"
                    android:layout_marginBottom="@dimen/size_2x"
                    android:background="@null"
                    android:contentDescription="@string/add_users_button"
                    android:padding="@dimen/size_2x"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_baseline_add_box_24" />

                <TextView
                    android:id="@+id/fragment_add_users_full_list_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fragment_add_user_text_input"
                    android:layout_marginStart="@dimen/size_2x"
                    android:layout_marginTop="@dimen/size_2x"
                    android:layout_marginEnd="@dimen/size_2x"
                    android:layout_marginBottom="@dimen/size_2x"
                    android:padding="@dimen/size_2x"
                    android:textAppearance="@android:style/TextAppearance.Material"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/size_subtitle" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </FrameLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>